--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -1,7 +1,7 @@
 # See https://github.com/nicksnyder/go-i18n for format documentation and some tools.
 
 [home_hero_title]
-other = "some words here? or pictures behind?"
+other = " "
 
 [home_hero_getting_started]
 other = "Get Started"
